- Added final to method's input parameters - Made builder classes final